@@ -95,7 +95,8 @@
      */
     function onMessage(pConnNum, pSocket){
         return function(pCommand) {
-            var lMsg, lWinCommand, lExec_func;
+            var lMsg, lJSON, lWinCommand, lExec_func, lDir,
+                lHome, lError;
             
             Util.log('#' + pConnNum + ': ' + pCommand);
             
@@ -115,20 +116,38 @@
                             pCommand = 'kill -9 ' + process.pid;
                 }
                 else {
-                    lMsg = {
+                    lJSON = {
                         stdout  : CLOUDCMD + ' exit     \n' +
                                   CLOUDCMD + ' update   \n',
                         stderr  : null
                     };
                     
-                    lMsg = JSON.stringify(lMsg);
+                    lMsg = Util.stringifyJSON( lJSON );
                     pSocket.send(lMsg);
                     
                     Util.log('received from client: ' + pCommand);
                     Util.log('sended to client: ' + lMsg);
                 }
             } else if( Util.isContainStrAtBegin(pCommand, 'cd ') ) {
-                pCommand = Util.removeStr(pCommand, 'cd ');
+                lDir    = Util.removeStr(pCommand, 'cd ');
+                lHome   = process.env.HOME;
+                
+                if ( Util.isContainStr(lDir, '~') )
+                    lDir = Util.replaceStr(lDir, '~', lHome);
+                
+                lError = Util.tryCatchLog(function(){
+                    process.chdir(lDir);
+                });
+                
+                if (lError) {
+                    lJSON = {
+                        stderr: Util.stringifyJSON( lError )
+                    };
+                    
+                    lMsg = Util.stringifyJSON( lJSON );
+                    
+                    pSocket.send(lMsg);
+                }
             }
             
             /* if we on windows and command is build in
